--- a/app/frontend/src/locales/en/translation.json
+++ b/app/frontend/src/locales/en/translation.json
@@ -1,13 +1,13 @@
 {
     "app": {
-        "title": "Talk to your Air France KLM assistant",
-        "footer": "Built with Azure AI Search + Azure OpenAI",
+        "title": "Bienvenue à la Macif !",
+        "footer": "Construit avec Azure et OpenAI",
         "stopRecording": "Stop recording",
         "startRecording": "Start recording",
         "stopConversation": "Stop conversation"
     },
     "status": {
-        "notRecordingMessage": "Ask anything about Air France KLM flights or menus, or book a flight",
+        "notRecordingMessage": "Posez vos questions à votre agent Macif sur vos politiques d'assurances et vos contrats.",
         "conversationInProgress": "Conversation in progress"
     },
     "history": {
