--- a/app/frontend/src/locales/en/translation.json
+++ b/app/frontend/src/locales/en/translation.json
@@ -1,13 +1,13 @@
 {
     "app": {
-        "title": "Talk to your Air France KLM assistant",
+        "title": "Talk to your Stu Ms Aircraft assistant ",
         "footer": "Built with Azure AI Search + Azure OpenAI",
         "stopRecording": "Stop recording",
         "startRecording": "Start recording",
         "stopConversation": "Stop conversation"
     },
     "status": {
-        "notRecordingMessage": "Ask anything about Air France KLM flights or menus, or book a flight",
+        "notRecordingMessage": "Ask anything about Stu Ms flights or menus, or book a flight",
         "conversationInProgress": "Conversation in progress"
     },
     "history": {
