--- a/app/frontend/src/locales/fr/translation.json
+++ b/app/frontend/src/locales/fr/translation.json
@@ -1,13 +1,13 @@
 {
     "app": {
-        "title": "Parlez à votre assistant Air France/ KLM",
+        "title": "Parlez à votre assistant STU / MS pour vos vols",
         "footer": "Créée avec Azure AI Search + Azure OpenAI + Container Apps",
         "stopRecording": "Arrêter l'enregistrement",
         "startRecording": "Commencer l'enregistrement",
         "stopConversation": "Arrêter la conversation"
     },
     "status": {
-        "notRecordingMessage": "Posez n’importe quelle question sur les vols Air France & KLM ou sur votre réservation",
+        "notRecordingMessage": "Posez n’importe quelle question sur les vols Stu & Ms ou sur votre réservation",
         "conversationInProgress": "Conversation en cours"
     },
     "history": {
